--- a/receipt_scanner_bot/src/main/resources/application.properties
+++ b/receipt_scanner_bot/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=receipt_scanner_bot
 
-bot.token=8307595575:AAEgYk8XWVc0m834VH7xpNeCKke6pUT_3zY
-fns.token=35512.K3FPHgc1WaftsuCHX
+bot.token=${RECEIPT_BOT_TOKEN:}
+fns.token=${FNS_TOKEN:}
 
 spring.datasource.url=jdbc:mysql://localhost:3306/receipts_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=${MYSQL_DS_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
