--- a/receipt_scanner_bot/src/main/resources/application.properties
+++ b/receipt_scanner_bot/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=receipt_scanner_bot
 
 bot.token=${RECEIPT_BOT_TOKEN:}
 fns.token=${FNS_TOKEN:}
+fns.url=https://proverkacheka.com/api/v1/check/get
 
 spring.datasource.url=jdbc:mysql://localhost:3306/receipts_db
 spring.datasource.username=root
